Updated the place order section

--- a/tc.html
+++ b/tc.html
@@ -64,13 +64,19 @@
             <section class="terms-section">
                 <h2 class="terms-title">2. Ordering Process</h2>
                 
-                <h3>2.1 Placing an Order</h3>
-                <p>Orders can be submitted through:</p>
-                <ul>
-                    <li><strong>Phone:</strong> [ +27672716896]</li>
-                    <li><strong>WhatsApp:</strong> [Insert WhatsApp Link]</li>
-                    <li><strong>Website Form:</strong> [Insert Form Link]</li>
-                </ul>
+           <h3>2.1 Placing an Order</h3>
+<p>Orders can be submitted through:</p>
+<ul>
+    <li><strong>Phone:</strong> +27 67 271 6896</li>
+    
+    <li><strong>WhatsApp:</strong> 
+        <a href="https://wa.me/+27672716896?text=Order%20Request:%0A%0A*Part%20Number/Name:*%20[Enter%20Part]%0A*Vehicle%20Model:*%20[Enter%20Model]%0A*Quantity:*%20[Enter%20Qty]" 
+           class="whatsapp-order-link" 
+           target="_blank">
+            Start WhatsApp Order 
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </li>
                 <p>All orders are subject to product availability and our acceptance.</p>
 
                 <h3>2.2 Order Confirmation</h3>
@@ -228,7 +234,7 @@
   </li>
   <li><strong>Phone:</strong> +27 83 519 0624 (Business hours: Mon-Fri 8AM-5PM SAT)</li>
   <li><strong>Form:</strong> 
-    <a href="/contact-form">Online Inquiry Form</a>
+    <a href="#contact">Online Ordering Form</a>
   </li>
 </ul>
 <p class="automation-note">Automated order confirmations & tracking updates sent via WhatsApp.</p>
