--- a/tc.html
+++ b/tc.html
@@ -67,7 +67,7 @@
            <h3>2.1 Placing an Order</h3>
 <p>Orders can be submitted through:</p>
 <ul>
-    <li><strong>Phone:</strong> +27 67 271 6896</li>
+    <li><strong>Phone:</strong> +27835190624</li>
     
     <li><strong>WhatsApp:</strong> 
         <a href="https://wa.me/+27835190624?text=Order%20Request:%0A%0A*Part%20Number/Name:*%20[Enter%20Part]%0A*Vehicle%20Model:*%20[Enter%20Model]%0A*Quantity:*%20[Enter%20Qty]" 
@@ -256,7 +256,7 @@
                 <li><a href="https://www.x.com/sparescapital" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
                 <li><a href="https://www.instagram.com/SparesCapital" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
             </ul>
-            <p>Contact us: <a href="mailto:support@sparescapital.com">support@sparescapital.com</a> | +276 7271 6896</p>
+            <p>Contact us: <a href="mailto:support@sparescapital.com">support@sparescapital.com</a> | +27835190624</p>
         </div>
     </footer>
 
