Revise about.html content and layout
Updated content and styles in the about page, including changes to the title, sections, and statistics. Adjusted navigation link text and improved the overall layout.

--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Spares Capital - Precision Automotive</title>
+    <title>About Us | Spares Capital</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Sora:wght@100;400;600;700&family=Orbitron:wght@700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Sora:wght@600;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
@@ -26,97 +26,59 @@
             <a href="index.html">Home</a>
             <a href="about.html" class="active">About Us</a>
             <a href="tc.html">Policies</a>
-            <a href="https://wa.me/27835190624" class="nav-cta">Contact Experts</a>
+            <a href="https://wa.me/27835190624" class="nav-cta">Inquiry</a>
         </div>
     </nav>
 
     <main class="about-container">
         <section class="section-header" data-reveal>
-            <h1 class="section-title">THE LEGACY OF <span>PERFORMANCE</span></h1>
-            <p class="section-subtitle">Since 2023, Spares Capital has been the cornerstone of high-performance
-                automotive parts sourcing in South Africa.</p>
+            <h1 class="section-title">Established in Expertise</h1>
+            <p class="section-subtitle">Spares Capital is South Africa’s premier supplier of genuine automotive
+                components.</p>
         </section>
 
         <section class="about-content" data-reveal>
-            <div class="service-card" style="text-align: left; margin-bottom: 50px;">
-                <h2 style="font-family: 'Orbitron'; font-size: 1.8rem; margin-bottom: 20px;">OUR JOURNEY</h2>
-                <p>Founded with a passion for mechanical excellence, Spares Capital started as a specialized consultancy
-                    for precision engine parts. Today, we stand as a premier national resource, bridging the gap between
-                    world-class manufacturers and the South African automotive industry.</p>
+            <div class="service-card"
+                style="margin-bottom: 40px; box-shadow: none; border: 1px solid var(--glass-border);">
+                <h2 style="font-size: 1.5rem; margin-bottom: 15px;">Our Story</h2>
+                <p style="color: var(--text-muted);">Founded with a commitment to quality, we specialize in sourcing
+                    precision parts for passenger vehicles, commercial fleets, and industrial machinery. We bridge the
+                    gap between manufacturer excellence and the end user.</p>
             </div>
 
             <div class="stats-grid">
-                <div class="stat-card">
-                    <i class="fas fa-calendar-alt" style="font-size: 2rem; color: var(--accent-red);"></i>
-                    <span class="stat-number">10+</span>
-                    <span class="stat-label">Years of Expertise</span>
+                <div class="stat-card" style="box-shadow: none; border: 1px solid var(--glass-border);">
+                    <span class="stat-number" style="color: var(--text-main); font-size: 2.5rem;">10+</span>
+                    <span class="stat-label">Years of Experience</span>
                 </div>
-                <div class="stat-card">
-                    <i class="fas fa-users" style="font-size: 2rem; color: var(--accent-red);"></i>
-                    <span class="stat-number">5000+</span>
-                    <span class="stat-label">Clients Served</span>
+                <div class="stat-card" style="box-shadow: none; border: 1px solid var(--glass-border);">
+                    <span class="stat-number" style="color: var(--text-main); font-size: 2.5rem;">5k+</span>
+                    <span class="stat-label">Satisfied Clients</span>
                 </div>
-                <div class="stat-card">
-                    <i class="fas fa-bolt" style="font-size: 2rem; color: var(--accent-red);"></i>
-                    <span class="stat-number">24/7</span>
-                    <span class="stat-label">Technical Support</span>
+                <div class="stat-card" style="box-shadow: none; border: 1px solid var(--glass-border);">
+                    <span class="stat-number" style="color: var(--text-main); font-size: 2.5rem;">24h</span>
+                    <span class="stat-label">Fast Response</span>
                 </div>
             </div>
         </section>
 
-        <section class="about-section" data-reveal>
-            <h2 class="section-title" style="text-align: center; font-size: 2rem;">OUR CORE MISSION</h2>
-            <div class="service-grid" style="margin-top: 40px;">
-                <div class="service-card">
-                    <i class="fas fa-check-double service-icon"></i>
-                    <h3>Absolute Quality</h3>
-                    <p>We source only original manufacturer (OEM) or certified high-performance alternatives.</p>
+        <section class="about-section" data-reveal style="margin-top: 60px;">
+            <h2 class="section-title" style="font-size: 1.8rem; text-align: center;">Our Mission</h2>
+            <div class="service-grid" style="margin-top: 30px;">
+                <div class="service-card" style="box-shadow: none; border: 1px solid var(--glass-border);">
+                    <i class="fas fa-gem service-icon"></i>
+                    <h3>Quality Focused</h3>
+                    <p>We only provide OEM-certified or high-performance parts.</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card" style="box-shadow: none; border: 1px solid var(--glass-border);">
                     <i class="fas fa-handshake service-icon"></i>
                     <h3>Integrity First</h3>
-                    <p>Transparent pricing and honest technical assessments for every client.</p>
+                    <p>Transparent pricing and technical honesty in every deal.</p>
                 </div>
-                <div class="service-card">
-                    <i class="fas fa-truck-fast service-icon"></i>
-                    <h3>Express Logistics</h3>
-                    <p>Same-day dispatch for critical components within the Gauteng region.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="about-section" style="margin-top: 100px;">
-            <h2 class="section-title" style="text-align: center; font-size: 2rem;">EXECUTIVE LEADERSHIP</h2>
-            <div class="team-grid">
-                <div class="team-card" data-reveal>
-                    <div
-                        style="height: 300px; background: #222; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-user-tie" style="font-size: 5rem; color: #444;"></i>
-                    </div>
-                    <div class="team-info">
-                        <h3>Nyasha Matundu</h3>
-                        <p style="color: var(--accent-red); font-weight: 600;">Founder & CEO</p>
-                    </div>
-                </div>
-                <div class="team-card" data-reveal>
-                    <div
-                        style="height: 300px; background: #222; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-user-gear" style="font-size: 5rem; color: #444;"></i>
-                    </div>
-                    <div class="team-info">
-                        <h3>Ian</h3>
-                        <p style="color: var(--accent-red); font-weight: 600;">Operations Director</p>
-                    </div>
-                </div>
-                <div class="team-card" data-reveal>
-                    <div
-                        style="height: 300px; background: #222; display: flex; align-items: center; justify-content: center;">
-                        <i class="fas fa-user-shield" style="font-size: 5rem; color: #444;"></i>
-                    </div>
-                    <div class="team-info">
-                        <h3>Owen Chikura</h3>
-                        <p style="color: var(--accent-red); font-weight: 600;">Technical Specialist</p>
-                    </div>
+                <div class="service-card" style="box-shadow: none; border: 1px solid var(--glass-border);">
+                    <i class="fas fa-shuttle-van service-icon"></i>
+                    <h3>Efficient Logistics</h3>
+                    <p>Optimized delivery networks to reduce downtime.</p>
                 </div>
             </div>
         </section>
@@ -124,13 +86,9 @@
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="year"></span> Spares Capital. All rights reserved.</p>
-            <div class="footer-socials">
-                <a href="https://facebook.com/SparesCapital" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://x.com/sparescapital" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/SparesCapital" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
-            <p style="font-size: 0.8rem; opacity: 0.5;">support@sparescapital.com | +27 83 519 0624</p>
+            <p style="font-size: 0.9rem; font-weight: 500;">&copy; <span id="year"></span> Spares Capital</p>
+            <p style="font-size: 0.8rem; color: var(--text-muted); margin-top: 10px;">support@sparescapital.com | +27 83
+                519 0624</p>
         </div>
     </footer>
 
@@ -141,15 +99,13 @@
 
             hamburger.addEventListener("click", () => {
                 navLinks.classList.toggle("active");
-                hamburger.querySelector("i").classList.toggle("fa-bars");
-                hamburger.querySelector("i").classList.toggle("fa-times");
             });
 
             const revealElements = document.querySelectorAll("[data-reveal]");
             const revealOnScroll = () => {
                 revealElements.forEach(el => {
                     const rect = el.getBoundingClientRect();
-                    if (rect.top < window.innerHeight * 0.85) {
+                    if (rect.top < window.innerHeight * 0.9) {
                         el.classList.add("revealed");
                     }
                 });
