Revise terms and conditions content and layout
Updated the terms and conditions page with new content and styling.

--- a/tc.html
+++ b/tc.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions | Spares Capital - Policies</title>
+    <title>Policies & Terms | Spares Capital</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Sora:wght@100;400;600;700&family=Orbitron:wght@700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Sora:wght@600;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
@@ -26,79 +26,109 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="tc.html" class="active">Policies</a>
-            <a href="https://wa.me/27835190624" class="nav-cta">Contact Experts</a>
+            <a href="https://wa.me/27835190624" class="nav-cta">Inquiry</a>
         </div>
     </nav>
 
     <main class="about-container">
         <section class="section-header" data-reveal>
-            <h1 class="section-title">POLICIES & <span>AGREEMENTS</span></h1>
-            <p class="section-subtitle">Effective Date: 01/03/2025. Ensuring transparency and excellence in every
-                transaction.</p>
+            <h1 class="section-title">Terms of Service</h1>
+            <p class="section-subtitle">Last Updated: March 2025. Standard operating procedures for Spares Capital (PTY)
+                LTD.</p>
         </section>
 
         <section class="about-content" data-reveal>
-            <div class="service-card" style="text-align: left; margin-bottom: 40px;">
-                <p>Welcome to Spares Capital. These Terms and Conditions govern your use of our digital platforms and
-                    the procurement of high-performance automotive components from us. By engaging our services, you
-                    accept these industrial standards.</p>
-            </div>
-
             <div class="terms-grid" style="display: grid; gap: 30px;">
-                <!-- 1. Definitions -->
-                <div class="service-card" style="text-align: left;">
-                    <h2
-                        style="font-family: 'Orbitron'; font-size: 1.5rem; margin-bottom: 20px; color: var(--accent-red);">
-                        01. DEFINITIONS</h2>
-                    <ul style="list-style: none; color: var(--text-muted);">
-                        <li style="margin-bottom: 10px;"><strong style="color: white;">Products:</strong> Precision
-                            components for automotive, logistics, and heavy industrial machinery.</li>
-                        <li style="margin-bottom: 10px;"><strong style="color: white;">Service:</strong> The
-                            professional supply and technical consultation for automotive parts.</li>
-                    </ul>
+
+                <!-- Section 1 -->
+                <div class="service-card"
+                    style="box-shadow: none; border: 1px solid var(--glass-border); text-align: left; padding: 40px;">
+                    <h2 style="font-size: 1.4rem; margin-bottom: 20px; color: var(--text-main);">1. Service Scope &
+                        Sourcing</h2>
+                    <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 15px;">Spares Capital
+                        operates as a specialized procurement and logistics service for automotive components. By
+                        requesting a quote, you authorize us to source parts from our network of certified global and
+                        local suppliers.</p>
+                    <p style="color: var(--text-muted); font-size: 0.95rem;">While we strive for 100% accuracy, the
+                        client is responsible for providing accurate Vehicle Identification Numbers (VIN) and engine
+                        codes to ensure part compatibility.</p>
                 </div>
 
-                <!-- 2. Ordering -->
-                <div class="service-card" style="text-align: left;">
-                    <h2
-                        style="font-family: 'Orbitron'; font-size: 1.5rem; margin-bottom: 20px; color: var(--accent-red);">
-                        02. PROCUREMENT PROCESS</h2>
-                    <h3 style="margin-bottom: 10px;">2.1 Order Channels</h3>
-                    <p style="margin-bottom: 20px;">Orders are formally accepted via encrypted digital forms or priority
-                        WhatsApp channels.</p>
-                    <a href="https://wa.me/27835190624" target="_blank" class="button order-button"
-                        style="padding: 0.8rem 2rem; font-size: 0.9rem;">Start WhatsApp Priority</a>
+                <!-- Section 2 -->
+                <div class="service-card"
+                    style="box-shadow: none; border: 1px solid var(--glass-border); text-align: left; padding: 40px;">
+                    <h2 style="font-size: 1.4rem; margin-bottom: 20px; color: var(--text-main);">2. Quotes & Payments
+                    </h2>
+                    <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 15px;">Quotes are valid for a
+                        period of 48 hours unless otherwise stated, due to the fluctuating nature of currency and
+                        supplier logistics. Prices quoted include VAT unless specified otherwise.</p>
+                    <p style="color: var(--text-muted); font-size: 0.95rem;">Full payment is required before parts are
+                        dispatched from our partner warehouses. We accept Electronic Funds Transfer (EFT) and secure
+                        digital payments. Parts remain the property of Spares Capital until fully paid.</p>
                 </div>
 
-                <!-- 3. Logistics -->
-                <div class="service-card" style="text-align: left;">
-                    <h2
-                        style="font-family: 'Orbitron'; font-size: 1.5rem; margin-bottom: 20px; color: var(--accent-red);">
-                        03. LOGISTICS & DEPLOYMENT</h2>
-                    <p>We provide expedited tracked courier services and same-day express pickup for urgent mechanical
-                        failures within the Tshwane metropolitan area.</p>
+                <!-- Section 3 -->
+                <div class="service-card"
+                    style="box-shadow: none; border: 1px solid var(--glass-border); text-align: left; padding: 40px;">
+                    <h2 style="font-size: 1.4rem; margin-bottom: 20px; color: var(--text-main);">3. Shipping & Logistics
+                    </h2>
+                    <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 15px;">We operate a
+                        direct-to-door logistics model. Delivery timelines are estimates and not guarantees. We are not
+                        liable for delays caused by third-party couriers, customs clearance, or supplier stock-outs.</p>
+                    <p style="color: var(--text-muted); font-size: 0.95rem;">Nationwide delivery is available across
+                        South Africa. Same-day delivery in metropolitan areas (such as Tshwane/Gauteng) applies only to
+                        stock items ordered before 11:00 AM.</p>
                 </div>
 
-                <!-- 4. Quality -->
-                <div class="service-card" style="text-align: left;">
-                    <h2
-                        style="font-family: 'Orbitron'; font-size: 1.5rem; margin-bottom: 20px; color: var(--accent-red);">
-                        04. QUALITY ASSURANCE</h2>
-                    <p>Every component undergoes a technical verification process. We accept returns for manufacturing
-                        defects within 7 business days of deployment.</p>
+                <!-- Section 4 -->
+                <div class="service-card"
+                    style="box-shadow: none; border: 1px solid var(--glass-border); text-align: left; padding: 40px;">
+                    <h2 style="font-size: 1.4rem; margin-bottom: 20px; color: var(--text-main);">4. Returns, Refunds &
+                        Warranties</h2>
+                    <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 15px;">
+                        <strong>Returns:</strong> Accepted within 7 days of delivery only if the part is in its
+                        original, uninstalled condition and packaging. A 15% handling fee may apply to correctly
+                        supplied parts that are returned.</p>
+                    <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 15px;"><strong>Electrical
+                            Parts:</strong> No returns or refunds on electrical components (sensors, ECUs, modules) once
+                        installed, as these can be easily damaged by faulty vehicle circuits.</p>
+                    <p style="color: var(--text-muted); font-size: 0.95rem;"><strong>Warranty:</strong> Manufacturer
+                        warranties apply to all new parts in accordance with the Consumer Protection Act. Warranty
+                        claims are subject to inspection by the manufacturer.</p>
                 </div>
+
+                <!-- Section 5 -->
+                <div class="service-card"
+                    style="box-shadow: none; border: 1px solid var(--glass-border); text-align: left; padding: 40px;">
+                    <h2 style="font-size: 1.4rem; margin-bottom: 20px; color: var(--text-main);">5. Liability Limitation
+                    </h2>
+                    <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 15px;">Spares Capital is not
+                        liable for any consequential losses, labor costs, or vehicle downtime resulting from the failure
+                        of a part, delayed delivery, or incorrect part fitment by a third party.</p>
+                    <p style="color: var(--text-muted); font-size: 0.95rem;">We strongly recommend that all parts be
+                        installed by RMI-certified workshops or qualified technicians.</p>
+                </div>
+
+                <!-- Section 6 -->
+                <div class="service-card"
+                    style="box-shadow: none; border: 1px solid var(--glass-border); text-align: left; padding: 40px;">
+                    <h2 style="font-size: 1.4rem; margin-bottom: 20px; color: var(--text-main);">6. POPI Act & Privacy
+                    </h2>
+                    <p style="color: var(--text-muted); font-size: 0.95rem;">In compliance with the Protection of
+                        Personal Information Act (POPIA), your data (name, VIN, address) is used strictly for the
+                        fulfillment of your orders and logisitics. We do not sell or share your data with third-party
+                        marketing firms.</p>
+                </div>
+
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; <span id="year"></span> Spares Capital. All rights reserved.</p>
-            <div class="footer-socials">
-                <a href="https://facebook.com/SparesCapital" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://x.com/sparescapital" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/SparesCapital" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
+            <p style="font-size: 0.9rem; font-weight: 500;">&copy; <span id="year"></span> Spares Capital (PTY) LTD</p>
+            <p style="font-size: 0.8rem; color: var(--text-muted); margin-top: 10px;">South African Automotive Logistics
+                Specialist</p>
         </div>
     </footer>
 
@@ -109,15 +139,13 @@
 
             hamburger.addEventListener("click", () => {
                 navLinks.classList.toggle("active");
-                hamburger.querySelector("i").classList.toggle("fa-bars");
-                hamburger.querySelector("i").classList.toggle("fa-times");
             });
 
             const revealElements = document.querySelectorAll("[data-reveal]");
             const revealOnScroll = () => {
                 revealElements.forEach(el => {
                     const rect = el.getBoundingClientRect();
-                    if (rect.top < window.innerHeight * 0.85) {
+                    if (rect.top < window.innerHeight * 0.9) {
                         el.classList.add("revealed");
                     }
                 });
